...
            android:text="@string/current_zone_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"/>

        <Button
            android:id="@+id/attackButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@color/red"
            android:text="@string/attack_button_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone" />
        <Button
            android:id="@+id/defendButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:text="@string/defend_button_text"
            android:textSize="20sp"
            android:textColor="@color/white"
...
