<resources>
    <string name="app_name">Campus Capture</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="nav_header_title">Campus Capture</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main">Main</string>
    <string name="menu_greeting">Greeting</string>
    <string name="main_fragment_text">Main fragment</string>
    <string name="greeting_fragment_text">Greeting fragment</string>
    <string name="menu_maps">Map</string>
    <string name="menu_test">Test fragment</string>
    <string name="hello_placeholder">Hello</string>
    <string name="menu_rules">Rules</string>
    <string name="toolbar_action_logout">Log out</string>
    <string name="toolbar_action_invite">Invite a friend!</string>
    <string name="scoreboard_title">Scores</string>
    <string name="menu_scoreboard">Scoreboard</string>
    <string name="permission_required_toast">Precise location is required</string>
    <string name="permission_rationale_location">This app needs to be able to locate players in order to be playable. Please click OK to give access to your location. If you refuse, Campus Capture won\'t be playable and will close.</string>
    <string name="location_permission_denied">Campus Capture will not work without having access to precise location</string>
    <string name="login_welcome_text">Login</string>
    <string name="login_google_text">Already registered?</string>
    <string name="placeholder_description">Add description here</string>
    <string name="register_string">Register</string>
    <string name="login_email_string">Email</string>
    <string name="login_password_string">Password</string>
    <string name="current_zone_text">Current zone:\n</string>
    <string name="attack_button_text">ATTACK</string>
    <string name="defend_button_text">DEFEND</string>
    <string name="wait_button_text">Next takeover in </string>
    <string name="attack_toast_text">Attacking zone </string>
    <string name="op_failed_toast_text">Operation failed</string>
    <string name="no_zone_toast_text">No zone to attack found</string>
    <string name="position_not_found_text">Failed to retrieve position</string>
    <string name="vote_zone_toast">Attack registered</string>
    <string name="register_spectator_string">Spectator</string>
    <string name="rules_text">Welcome to <b>Campus Capture</b>, the fun game where you and your section compete against the other sections to see who can occupy the most buildings on campus!\n\n
The rules are simple:
\n<ul>
\n<li>The map shows you all the zones on campus and who they belong to</li>
\n\n<li>A <b>take-over</b> is the time during which zones can be attacked and defended</li>
\n\n<li>Take-overs span the first 15 minutes of every hour</li>
\n\n<li>During every take-over, go to the zone you wish to <b>attack or defend</b> and press the button</li>
\n\n<li>The section with the most players in the same zone captures it</li>
\n\n<li>You can check the number of players attacking a given zone by tapping on it</li>
\n\n<li>Zones award different amounts of <b>points</b> depending on how desirable they are</li>
\n\n<li>Every day, you will receive a certain amount of points to spend on <b>power-ups</b></li>
\n\n<li>You can choose yourself how many of your points you\'re willing to spend for a given power-up</li>
\n\n<li>If enough points come together, the power-up goes into effect; otherwise, the points are refunded</li>
\n\n<li>Collaborate with your teammates to buy power-ups together to make your section stronger</li>
\n\n<li>Follow the total amount of points your section has accumulated under the scoreboard tab</li>
\n\n<li>If you need help, <b>invite your friends</b> to join you in your effort under the \'…\' in the top right corner</li>
\n</ul>
\n\n<b>Have fun and good luck!</b>\n\n\n</string>
    <string name="TOS_text">By accepting those terms of service you agree that your data will be collected and used for non-legal activities such as DDoS-ing, Botting and…</string>
    <string name="invite_button">Invite your friends</string>
    <string name="invitation_text">Hey there, I need help defending our faculty\'s territory in Campus Capture!\nCome join me now:\u00A0</string>
    <string name="invitation_link">&lt;App link here&gt;</string>
    <string name="login_actually_no_text">Actually no</string>
    <string name="login_string">Login</string>
    <string name="register_welcome_text">Register</string>
    <string name="register_already_registered_text">Already registered</string>
    <string name="login_password_forgotten_string">Password forgotten?</string>
    <string name="change_password_greeting_string">Enter your email address and you will receive a mail</string>
    <string name="send_mail_button_string">Send mail</string>
    <string name="profile_subtitle_string">Please select the faculty you want to fight for!</string>
    <string name="profile_alert_title">"Are you sure ?"</string>
    <string name="profile_selection_warning">"Once selected, the selected section will be permanent ! Do you want to proceed ?"</string>
    <string name="profile_title">Profile</string>
    <string name="profile_section">Section :</string>
    <string name="profile_apply_button">Apply</string>
    <string name="TOS_agree">"I agree"</string>
    <string name="about_text">This app was made with <b>love</b> (and lots of pain) by:
    <ul>\n<li>Elija Dirren</li>\n<li>Benjamin Beuret</li>\n<li>David Karoubi</li>\n<li>Antoine Moix</li>\n<li>Raphaël Temperli</li>\n</ul>\nFor the course CS-306 <i>Software Development Project</i>\n\nThis project is open-source ✨\nYou can find the code <a>on the GitHub repo.</a>\nIf you happen to catch a bug, make sure to let us know!\n\nHave fun!
    </string>

    <!-- for the section spinner-->
    <string-array name="profile_sections">
        <item>ARCHI</item>
        <item>GC</item>
        <item>SIE</item>
        <item>IN</item>
        <item>SC</item>
        <item>CH</item>
        <item>MA</item>
        <item>PH</item>
        <item>EL</item>
        <item>SV</item>
        <item>MX</item>
        <item>MECA</item>
        <item>MT</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="power_up_title">Store</string>
    <string name="menu_shop">Shop</string>
    <string name="power_up_spend_button_text">Spend</string>
    <string name="menu_about">About</string>
    <string name="login_resend_button_string">Resend mail</string>
    <string name="PowerUp1Name">Double Attack Power</string>
</resources>