<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="0.5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="0.5dp"
    android:orientation="vertical"
    android:theme="@style/Theme.CampusCapture">

    <TextView
        android:id="@+id/power_up_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceListItem" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/power_up_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/power_up_fund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_weight="1"/>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/power_up_progress_bar"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:progress="0"
         />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/power_up_spend_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textAlignment="center" />

        <SeekBar
            android:id="@+id/power_up_seek_bar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:max="10"
            android:progress="3" />

        <Button
            android:id="@+id/power_up_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/power_up_spend_button_text"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:enabled="false"
            />




    </LinearLayout>

</LinearLayout>