<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.VotePowerUpFragment">

        <TextView
            android:id="@+id/power_up_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textAlignment="viewEnd"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/power_up_title"
            android:layout_margin="20sp"
            android:textSize="34sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/power_up_view"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"/>

</androidx.appcompat.widget.LinearLayoutCompat>